# cob_tutorials

./: stack.xml  tutorials.rosinstall  tutorials_robot.rosinstall
cob_navigation_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_navigation_tutorials/cob3-3/: command_gui_buttons.yaml
cob_navigation_tutorials/launch/: dashboard.launch
cob_navigation_tutorials/src/: status_ready.py
cob_scenario_example/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_scenario_example/config/: upload_scenario_param.launch
cob_scenario_example/config/envs/: upload_env_param.launch
cob_scenario_example/config/envs/ipa-kitchen/: navigation_goals.yaml
cob_scenario_example/config/robots/: upload_robot_param.launch
cob_scenario_example/launch/: scenario.launch  scenario.xml  scenario_robot.launch
cob_script_server_tutorial/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_script_server_tutorial/launch/: script_server_tutorial.launch
cob_script_server_tutorial/scripts/: simple_grasp.py
cob_task_coordination_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_task_coordination_tutorials/config/ipa-apartment/: object_locations.yaml
cob_task_coordination_tutorials/launch/: explore.launch
cob_task_coordination_tutorials/scripts/: explore.py
cob_task_coordination_tutorials/src/: reset_simulation.py
cob_tutorials/: CMakeLists.txt  package.xml
