<package format="2">
  <name>cob_scenario_example</name>
  <version>0.1.0</version>
  <description>
    cob_scenario_example
  </description>

  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_scenario_example</url>

  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>

</package>
