<package format="2">
  <name>cob_tutorials</name>
  <version>0.1.0</version>
  <description>
    meta-package for the cob_tutorials
  </description>

  <license>LGPL</license>
  <url type="website">http://ros.org/wiki/cob_tutorials</url>

  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_navigation_tutorials</exec_depend>
  <exec_depend>cob_scenario_example</exec_depend>
  <exec_depend>cob_script_server_tutorial</exec_depend>
  <exec_depend>cob_task_coordination_tutorials</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
